[#175555397] GetBPDAwards function and Award model
